<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dark_underline"
            android:textColor="@color/second"
            android:text="@string/dialog_header_end"
            android:textSize="23sp"
            android:gravity="center"
            android:layout_marginBottom="32dp"
            android:paddingBottom="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/player1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Spieler1"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/player2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Spieler2"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/player3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Spieler3"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/player4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Spieler4"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/player5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Spieler5"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/player6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Spieler6"
                    android:textSize="12sp" />
                <EditText
                    android:id="@+id/player7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Spieler7"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/player8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Spieler8"
                    android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/points1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Punkte1"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/points2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Punkte2"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/points3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Punkte3"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/points4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Punkte4"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/points5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Punkte5"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/points6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Punkte6"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/points7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Punkte7"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/points8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Punkte8"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center">

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_action_ok"
                android:background="@drawable/filled_background_round"
                android:textColor="@color/first"/>
            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_action_cancel"
                android:background="@drawable/filled_background_round"
                android:textColor="@color/first"
                android:layout_marginLeft="32dp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>